# proof_of_value

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_cdhdashboard.sh  vd_app.py
.streamlit/: config.toml
value_dashboard/ai/: __init__.py  code_agent.py  code_executor.py  data_context.py  litellm_client.py  responses.py
value_dashboard/config/: config_demo.toml  config_template.toml  llm_config.toml
value_dashboard/config_generator/: __init__.py  ai.py  config_builder.py  configuration_studio.py  diff.py  field_classification.py  preprocess.py  preprocess_builders.py  validation.py  validation_ui.py
value_dashboard/config_ui/: __init__.py  configuration_studio.py  preprocess_builders.py
value_dashboard/datalake/: df_db_proxy.py
value_dashboard/metrics/: clv.py  constants.py  conversion.py  descriptive.py  engagement.py  experiment.py  ml.py
value_dashboard/pages/: ai_configuration_studio.py  chat_with_data.py  clv_analysis.py  config_gen.py  config_studio.py  configuration_editor.py  dashboard.py  data_import.py  home.py  ih_analysis.py  mkt_dashboard.py  toml_editor.py
value_dashboard/pipeline/: datatools.py  holdings.py  ih.py
value_dashboard/report_builder/: __init__.py  field_catalog.py  metric_display.py  models.py  recipes.py  serialization.py  service.py  ui_editor.py  ui_library.py  ui_raw.py  validation.py
value_dashboard/reports/: clv_plots.py  conversion_plots.py  descriptive_plots.py  engagement_plots.py  experiment_plots.py  model_ml_scores_plots.py  registry.py  repdata.py  reports.py  shared_plot_utils.py
value_dashboard/utils/: cli.py  common_constants.py  config.py  config_builder.py  db_utils.py  file_utils.py  llm_utils.py  logger.py  plotly_utils.py  polars_utils.py  py_utils.py  st_utils.py  stats.py  string_utils.py  timer.py
