[project]
name = "cdhdashboard"
version = "1.0.4"
description = "The CDH Value Dashboard Application is an open-source prototype designed to provide customizable metrics and insights for linking marketing actions to business outcomes, such as customer lifetime value (CLV) and conversion rates."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Grigoriy Sen", email = "grigoriy.sen@pega.com" }
]
dependencies = [
    "numpy>=1.26.4,<2",
    "polars>=1.38.1",
    "polars-ds>=0.10.5",
    "datasketches>=5.2.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "streamlit>=1.55.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.10.1",
    "streamlit-dynamic-filters>=0.1.9",
    "streamlit-option-menu>=0.4.0",
    "streamlit-dimensions>=0.0.1",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-sortables>=0.3.1",
    "tomlkit>=0.13.3",
    "psutil>=7.1.3",
    "duckdb>=1.5.0",
    "lifetimes>=0.11.3",
    "kaleido>=1.2.0",
    "matplotlib>=3.7.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
cdhdashboard = "value_dashboard.utils.cli:main"

[project.optional-dependencies]
ai = [
    "pandasai>=3.0.0",
    "pandasai-litellm>=0.0.1",
    "litellm>=1.83.3",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
ai = [
    "pandasai>=3.0.0",
    "pandasai-litellm>=0.0.1",
    "litellm>=1.83.3",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
py-modules = ["vd_app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["value_dashboard*"]

[tool.setuptools.package-data]
value_dashboard = [
    "config/*.toml",
    "config/*.yaml",
    "img/*.ico",
    "img/*.jpeg",
    "img/*.jpg",
    "img/*.png",
]

[tool.setuptools.data-files]
".streamlit" = [".streamlit/config.toml"]
