[project]
name = "cdhdashboard"
version = "1.0.5"
description = "The CDH Value Dashboard Application is an open-source prototype designed to provide customizable metrics and insights for linking marketing actions to business outcomes, such as customer lifetime value (CLV) and conversion rates."
readme = "README.md"
requires-python = ">=3.11,<=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Grigoriy Sen", email = "grigoriy.sen@pega.com" }
]
dependencies = [
    "numpy>=1.26.4,< 2.4",
    "polars>=1.40.1",
    "polars-ds>=0.11.2",
    "datasketches>=5.2.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "streamlit>=1.57.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "streamlit-dynamic-filters>=0.1.9",
    "streamlit-option-menu>=0.4.0",
    "streamlit-dimensions>=0.0.1",
    "streamlit-autorefresh>=1.0.1",
    "tomlkit>=0.13.3",
    "psutil>=7.1.3",
    "duckdb>=1.5.0",
    "lifetimes>=0.11.3",
    "pyyaml>=6.0.3",
    "matplotlib>=3.10.9"
]

[project.scripts]
cdhdashboard = "value_dashboard.utils.cli:main"

[project.optional-dependencies]
ai = [
    "litellm>=1.83.14",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
ai = [
    "litellm>=1.83.14",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
py-modules = ["vd_app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["value_dashboard*"]

[tool.setuptools.package-data]
value_dashboard = [
    "config/*.toml",
    "config/*.yaml",
    "img/*.ico",
    "img/*.jpeg",
    "img/*.jpg",
    "img/*.png",
]

[tool.setuptools.data-files]
".streamlit" = [".streamlit/config.toml"]
